test_programs/compile_failure/noirc_frontend_tests_unconstrained_numeric_generic_in_impl/src/main.nr

        pub struct Foo {}

        impl<let N: u32> Foo {}

        fn main() {
            let _ = Foo {};
        }
        